Just some style fixes for the profile. Button looks like other buttons and kept the component from covering sidebar

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2219,7 +2219,7 @@ progress {
   color: #212529;
   background-color: #f8fafc;
   outline: 0;
-  
+
 }
 .form-control::-webkit-date-and-time-value {
   height: 1.6em;
@@ -3017,7 +3017,7 @@ textarea.form-control-lg {
 }
 .btn:hover {
   color: #212529;
-  
+
 }
 .btn-check:focus + .btn, .btn:focus {
   outline: 0;
@@ -4597,7 +4597,7 @@ textarea.form-control-lg {
 
 .card-title {
   margin-bottom: 0.5rem;
-  
+
 }
 
 .card-subtitle {
@@ -11485,4 +11485,9 @@ textarea.form-control-lg {
   width: 100%;
   display: block;
   font-size: 1.2rem;
+}
+.sizing-profile{
+    width: 70%;
+    display: block;
+
 }
